# AdventOfCode

./: .flake8  .gitignore  Makefile  README.md  create_day.py  pyproject.toml  run.py
2015/day1/: program.php
2015/day10/: program.php
2015/day11/: solution.txt
2015/day12/: JsonParser.php  program.php
2015/day13/: HappinessCalculator.php  Parser.php  program.php
2015/day14/: Deer.php  Parser.php  ScoreKeeper.php  program.php
2015/day15/: program.php
2015/day16/: program.php
2015/day17/: program.php
2015/day18/: program.php
2015/day19/: program.php
2015/day2/: Parser.php  Present.php  program.php
2015/day20/: program.php
2015/day21/: program.php
2015/day22/: program.php
2015/day23/: program.php
2015/day24/: program.php
2015/day25/: program.php
2015/day3/: Dispatcher.php  Parser.php  program.php
2015/day4/: Miner.php  program.php
2015/day5/: StringChecker.php  program.php
2015/day6/: Decorator.php  Instruction.php  Parser.php  program.php
2015/day7/: Assembler.php  Operation.php  Parser.php  program.php
2015/day8/: CodeString.php  Parser.php  program.php
2015/day9/: DistanceCalculator.php  Parser.php  program.php
2016/day1/: program.php
2016/day10/: program.php
2016/day2/: program.php
2016/day3/: program.php
2016/day4/: program.php
2016/day5/: program.php
2016/day6/: program.php
2016/day7/: program.php
2016/day8/: program.php
2016/day9/: program.php
Year2022/src/: Day1.java  Day10.java  Day11.java  Day2.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
Year2023/src/: Day1.java  FileParser.java
src/: __init__.py
src/utils/: common.py  input_reader.py
src/year_2015/: day_01.py
src/year_2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
tests/: test_utils.py  test_year_2015.py  test_year_2025.py
year2024/: run.py
year2024/input/: day2.txt
year2024/src/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day15_sol.py  day16.py  day17.py  day18.py  day19.py  day2.py  (+14 more)
(+25 files in other folders)
